examples/test/testpolicy1369.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1369
  namespace: namespace254
spec:
  podSelector:
    matchLabels:
      key21: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value15
          key11: value40
      podSelector:
        matchLabels:
          key14: value13
          key49: value1
          key4: value34
